
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ssize_t ;
typedef int buffer ;


 int fprintf (int ,char*,int) ;
 int perror (char*) ;
 int * sockets ;
 int stderr ;
 int write (int ,char*,int) ;

__attribute__((used)) static void writemsg(void) {
 char buffer[64];

 ssize_t n = write(sockets[0], buffer, sizeof(buffer));

 if (n < 0) {
  perror("write");
  return;
 }
 if (n != sizeof(buffer))
  fprintf(stderr, "short write: %lu\n", n);
}
